; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-serve-files.c_get_rel_path.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-serve-files.c_get_rel_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.serve_files_priv = type { i32, i8* }

@.str = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, %struct.serve_files_priv*)* @get_rel_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_rel_path(i8* %0, %struct.serve_files_priv* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.serve_files_priv*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.serve_files_priv* %1, %struct.serve_files_priv** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load %struct.serve_files_priv*, %struct.serve_files_priv** %5, align 8
  %9 = getelementptr inbounds %struct.serve_files_priv, %struct.serve_files_priv* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i8, i8* %7, i64 %11
  store i8* %12, i8** %6, align 8
  %13 = load %struct.serve_files_priv*, %struct.serve_files_priv** %5, align 8
  %14 = getelementptr inbounds %struct.serve_files_priv, %struct.serve_files_priv* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp eq i32 %15, 1
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 -1
  store i8* %19, i8** %6, align 8
  br label %20

20:                                               ; preds = %17, %2
  %21 = load i8*, i8** %6, align 8
  %22 = load i8, i8* %21, align 1
  %23 = icmp ne i8 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i8*, i8** %6, align 8
  store i8* %25, i8** %3, align 8
  br label %37

26:                                               ; preds = %20
  %27 = load %struct.serve_files_priv*, %struct.serve_files_priv** %5, align 8
  %28 = getelementptr inbounds %struct.serve_files_priv, %struct.serve_files_priv* %27, i32 0, i32 1
  %29 = load i8*, i8** %28, align 8
  %30 = call i64 @streq(i8* %29, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %26
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %37

33:                                               ; preds = %26
  %34 = load %struct.serve_files_priv*, %struct.serve_files_priv** %5, align 8
  %35 = getelementptr inbounds %struct.serve_files_priv, %struct.serve_files_priv* %34, i32 0, i32 1
  %36 = load i8*, i8** %35, align 8
  store i8* %36, i8** %3, align 8
  br label %37

37:                                               ; preds = %33, %32, %24
  %38 = load i8*, i8** %3, align 8
  ret i8* %38
}

declare dso_local i64 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
